@@ -1,3 +1,11 @@
+2024-11-12  Ulrich Mueller  <ulm@gentoo.org>
+
+	* am/libmplib.am (libmplibextramath_a_OBJECTS,
+	libmplibbackends_a_OBJECTS): add mplib.h dependency to fix parallel
+	make failure.
+	https://tug.org/pipermail/tex-live/2024-November/050909.html
+	https://bugs.gentoo.org/837875
+
 2024-10-08   Luigi Scarso <luigi.scarso@gmail.com>
 	* Fixed a typo in the svg backend that was confusing the draw attributes --
 	see metapost ml  Missing stroke-linejoin attribute in SVG output for filldraw command
